# challenge-20220626

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
core/: emailSender.py  sample.env  scheduler.py
core/core/: settings.py  urls.py  views.py
core/environment/: environment.py
core/fitness_foods_lc/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/scraper/management/commands/: crawl.py
core/scraper/scraper/: items.py  pipelines.py  settings.py
core/scraper/scraper/spiders/: products_spider.py
